fix: [CCM-7783]: Fix Recommendation Name Overflow (#9102)
* fix: [CCM-7783]: Fix Recommendation Name Overflow

* fix: [CCM-7783]: Update Snapshot

--- a/src/modules/75-ce/pages/recommendationList/RecommendationList.module.scss
+++ b/src/modules/75-ce/pages/recommendationList/RecommendationList.module.scss
@@ -9,8 +9,7 @@
   height: 100%;
   padding: var(--spacing-medium) var(--spacing-xxxlarge) !important;
 
-  .resourceNameContainer {
-    max-width: 400px;
+  .nameContainer {
     align-items: baseline;
   }
 }
